Add action query API methods
